# dh_api_middleware

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  ENDPOINTS.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: README.md  __init__.py  gateway.py  http_client.py  main.py
app/internal/: README.md
app/main/: README.md  health.py
app/microservices/: README.md  __init__.py
app/microservices/admin/: app.py
app/microservices/auth/: app.py
app/microservices/core/: __init__.py  app.py
app/microservices/health_monitoring/: README.md  __init__.py  app.py
app/microservices/iam/: __init__.py  app.py
app/microservices/logger/: __init__.py  app.py
app/microservices/logger_tracer/: app.py
app/microservices/message_sender/: app.py
app/microservices/mfa/: __init__.py  app.py
app/settings/: README.md  __init__.py  env.py
app/shared/: __init__.py
app/shared/utils/: logger.py
docs/: api_middleware.service  architecture.md  environment.md  index.md  microservices.md  tests.md
docs/proposals/: 001-api-response-format.md
health_monitoring_gateway/: README.md  __init__.py
health_monitoring_gateway/application/: README.md  call_health_monitoring_backend.py
health_monitoring_gateway/domain/: README.md  __init__.py  backend_http.py
health_monitoring_gateway/infrastructure/: README.md  __init__.py  http_client.py  settings.py
health_monitoring_gateway/presentation/: README.md  __init__.py  backend_http_bridge.py
tests/: README.md  conftest.py
tests/internal/: README.md  test_gateway.py
tests/microservices/: README.md
(+153 files in other folders)
