[project]
name = "api-middleware"
version = "0.1.0"
description = "FastAPI middleware in front of health_monitoring: exposes routes and delegates to the backend over HTTP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["health_monitoring_gateway"]
